--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,23 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
-
-<%= yield %>
-
+<body data-spy="scroll" data-target=".subnav" data-offset="50">
+<%= render 'top_menu' %>
+<!-- Content contains nav, section and aside parts -->
+<div class="container-fluid">
+  <div class="row-fluid">
+    <!-- nav... not here by default -->
+    <!-- section -->
+    <div class="span10">
+      <!-- do not use 'flash' as the partial name, it will override flash variable -->
+      <%= render 'flash_prompt' %>
+      <!-- all the views generated here -->
+      <%= yield %>
+    </div>
+    <!-- aside -->
+    <%= yield :aside %>
+  </div>
+</div>
+<%= render 'footer' %>
 </body>
 </html>
