Adding password reset

--- a/app/views/application/_top_menu.html.erb
+++ b/app/views/application/_top_menu.html.erb
@@ -19,6 +19,9 @@
             </ul>
           </li>
         </ul>
+        <form class="navbar-search">
+          <input type="text" class="search-query" placeholder="<%= t 'search' %>">
+        </form>
         <ul class="nav pull-right">
           <li>
             <% if current_user.nil? %>
