--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,23 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div class="container">
+  <table class="table table-bordered table-striped sortable-table">
+    <thead>
+    <tr>
+      <th class="header">ID</th>
+      <th class="header">姓名</th>
+      <th class="header">邮箱</th>
+      <th class="header">指导农户</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <% @users.each do |user| %>
+      <tr>
+        <td><%= user.id %></td>
+        <td><%= link_to user.name, user_path(user) %></td>
+        <td><%= user.email %></td>
+        <td><%= user.farmers.count %></td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+</div>
