--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
+<%= bootstrap_will_paginate @farmers %>
 <div class="container">
   <table class="table table-bordered table-striped sortable-table">
     <thead>
@@ -21,3 +22,4 @@
     </tbody>
   </table>
 </div>
+<%= bootstrap_will_paginate @farmers %>
